--- a/index.html
+++ b/index.html
@@ -102,18 +102,19 @@
 
         <h2>Track Chairs</h2>
         <ul>
-            <li>Yuncheng Jiang, South China Normal University, China, ycjiang@scnu.edu.cn</li>
-            <li>Chen Li, Nagoya University, Japan, li.chen.z2@a.mail.nagoya-u.ac.jp</li>
+            <li>Yuncheng Jiang, South China Normal University, China</li>
+            <li>Chen Li, Nagoya University, Japan</li>
         </ul>
 
         <h2>Program Committee</h2>
         <ul>
-            <li>Weiru Liu, University of Bristol, TBD</li>
-            <li>Gang Li, Deakin University, TBD</li>
-            <li>Aladdin Ayesh, University of Aberdeen, TBD</li>
-            <li>Mengchi Liu, Carleton University, TBD</li>
-            <li>Tianwei Zhang, Nanyang Technological University, TBD</li>
-            <li>Xiaowei Jia, University of Minnesota, TBD</li>
+            <li>Weiru Liu, University of Bristol, United Kingdom</li>
+            <li>Gang Li, Deakin University, Australia</li>
+            <li>Aladdin Ayesh, University of Aberdeen, United Kingdom</li>
+            <li>Mengchi Liu, Carleton University, Canada</li>
+            <li>Tianwei Zhang, Nanyang Technological University, Singapore</li>
+            <li>Xiaowei Jia, University of Pittsburgh, United States</li>
+            <li>Zhiwen Yu, South China Normal University, China</li>
         </ul>
     </div>
 </body>
