--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <li>Mengchi Liu, Carleton University, Canada</li>
             <li>Tianwei Zhang, Nanyang Technological University, Singapore</li>
             <li>Xiaowei Jia, University of Pittsburgh, United States</li>
-            <li>Zhiwen Yu, South China Normal University, China</li>
+            <li>Zhiwen Yu, South China University of Technology, China</li>
         </ul>
     </div>
 </body>
