--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Call for Papers</h1>
         <p style="background-color: #D3D3D3;">
             We invite submissions for our upcoming <b>Special Track on Data Intelligence & Knowledge Mining</b> at <a href="https://adma2024.github.io/">The 20th International Conference Advanced Data Mining and Applications
-            2024 (ADMA 2024)</a>.
+            2024 (ADMA 2024)</a>. ADMA is in the list of CCF (China Computer Federation) recommended Conferences (C series, Databases/Data Mining).
         </p>
 
         <h2>Background</h2>
