--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             The applications of Data Intelligence and Knowledge Mining are diverse, ranging from:
         </p>
         <ul>
-            <li>Healthcare for disease prediction, personalized medicine, and healthcare management.</li>
+            <li>Education for personalized learning, curriculum design and assessment, and teacher-AI collaboration.</li>
             <li>Finance for fraud detection, risk assessment, and market analysis.</li>
             <li>Marketing for customer segmentation, targeted advertising, and consumer behavior analysis.</li>
         </ul>
@@ -94,7 +94,7 @@
 
         <h2>Important Dates</h2>
         <ul>
-            <li>Paper Submission Deadline: 1st June, 2024 (AoE)</li>
+            <li>Paper Submission Deadline: 15th June, 2024 (AoE)</li>
             <li>Notification of Acceptance: 1st August, 2024 (AoE)</li>
             <li>Camera-Ready Paper Due: 15th August, 2024 (AoE)</li>
             <li>Conference Dates: 3rd~5th December, 2024 (AEST)</li>
