--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li>Knowledge graph and semantic reasoning.</li>
             <li>Data-driven decision making and prediction.</li>
             <li>Privacy and security in data intelligence.</li>
-            <li>Applications of data intelligence in various domains (e.g., healthcare, finance, marketing).</li>
+            <li>Applications of data intelligence in various domains (e.g., education, finance, marketing).</li>
         </ul>
 
         <h2>Formatting Guidelines</h2>
