--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         <h2>Program Committee</h2>
         <ul>
             <li>Weiru Liu, University of Bristol, United Kingdom</li>
+            <li>Laura E. Barnes, University of Virginia, United States</li>
             <li>Aladdin Ayesh, University of Aberdeen, United Kingdom</li>
             <li>Mengchi Liu, Carleton University, Canada</li>
             <li>Tianwei Zhang, Nanyang Technological University, Singapore</li>
