--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <h2>Important Dates</h2>
         <ul>
             <li>Paper Submission Deadline: 20th July, 2024 (AoE)</li>
-            <li>Notification of Acceptance: 25th August, 2024 (AoE)</li>
-            <li>Camera-Ready Paper Due: 5th September, 2024 (AoE)</li>
+            <li>Notification of Acceptance: 3rd September, 2024 (AoE)</li>
+            <li>Camera-Ready Paper Due: 15th September, 2024 (AoE)</li>
             <li>Conference Dates: 3rd~5th December, 2024 (AEST)</li>
         </ul>
 
