--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         </ul>
         <p>We welcome contributions from a wide range of topics, including but not limited to:</p>
         <ul>
+            <li>Adoptions of large models in data mining and information extraction</li>
             <li>Advanced data mining techniques and algorithms</li>
             <li>Knowledge discovery and representation</li>
             <li>Big data analytics and visualization</li>
