--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
     <section>
         <h2>Important Dates</h2>
         <ul>
-            <li><b>Paper Submission Deadline: </b>15th June, 2025 (AoE)</li>
-            <li><b>Notification of Acceptance: </b>1st August, 2025 (AoE)</li>
-            <li><b>Camera-Ready Paper Due: </b>15th August, 2025 (AoE)</li>
-            <li><b>Conference Dates: </b>3rd~5th December, 2025 (AEST)</li>
+            <li><b>Paper Submission Deadline: </b>8th May, 2025 (AoE)</li>
+            <li><b>Notification of Acceptance: </b>27th July, 2025 (AoE)</li>
+            <li><b>Camera-Ready Paper Due: </b>10th August, 2025 (AoE)</li>
+            <li><b>Conference Dates: </b>22nd~24th October, 2025 (AEST)</li>
         </ul>
     </section>
 
