--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <section>
         <h2>Important Dates</h2>
         <ul>
-            <li><b>Paper Submission Deadline: </b>8th May, 2025 (AoE)</li>
+            <li><b>Paper Submission Deadline: </b>22nd May, 2025 (AoE)</li>
             <li><b>Notification of Acceptance: </b>27th July, 2025 (AoE)</li>
             <li><b>Camera-Ready Paper Due: </b>10th August, 2025 (AoE)</li>
             <li><b>Conference Dates: </b>22nd~24th October, 2025 (AEST)</li>
