--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <li><b>Paper Submission Deadline: </b>5th June, 2025 (AoE)</li>
             <li><b>Notification of Acceptance: </b>17th August, 2025 (AoE)</li>
             <li><b>Camera-Ready Paper Due: </b>24th August, 2025 (AoE)</li>
-            <li><b>Conference Dates: </b>22nd~24th October, 2025 (AEST)</li>
+            <li><b>Conference Dates: </b>22nd~24th October, 2025 (AoE)</li>
         </ul>
     </section>
 
